--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,3 +146,19 @@ table {
   padding: 20px;
   border-radius: 15px;
 }
+.container {
+  margin-top: 100px;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 15px;
+  height: auto;
+}
+.logout {
+  cursor: pointer;
+}
+
+img {
+  width: 300px;
+  height: 400px;
+}
