--- a/src/assets/css/landingStyle.css
+++ b/src/assets/css/landingStyle.css
@@ -464,3 +464,50 @@ a {
     font-size: 1.25em;
   }
 }
+
+.links li a {
+  position: relative;
+  font-weight: bold;
+}
+.links li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  /* margin: 0 0.5em; */
+  bottom: -0.8em;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  transform: scaleX(0); /* Use transform instead of scale */
+  transform-origin: left; /* Define transform origin */
+}
+nav.fixed .links li a::after {
+  background-color: black;
+}
+.links li:hover a::after {
+  animation-name: animatee;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+}
+
+@keyframes animatee {
+  0% {
+    transform: scaleX(0);
+  }
+  50% {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+  51% {
+    transform-origin: right;
+  }
+  100% {
+    transform-origin: right;
+    transform: scaleX(0);
+  }
+}
+
+nav.fixed.active {
+  transform: translateY(0);
+}
