remove bootstrap files and refactor design of category products and checkout page

--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -1,12 +1,13 @@
-@import url("../fonwawsome/all.css") layer(fonwawsome);
+@import url("../fontawesome/all.css") layer(fontawesome);
 @import url("./output.css") layer(tailwind);
 @layer site {
   * {
     font-family: "Cairo", sans-serif;
   }
   body {
-    animation: winter 20s linear infinite;
-    background-image: url(../images/3.png);
+    background-color: #eee;
+    /* animation: winter 20s linear infinite;
+    background-image: url(../images/3.png); */
   }
   .active-category {
     border: 2px solid #000 !important;
@@ -15,7 +16,9 @@
     display: flex;
     flex-wrap: wrap;
   }
-
+  .w-95 {
+    width: 95%;
+  }
   /* nav */
 
   @media (max-width: 480px) {
